// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExpandHourList /> should be closed 1`] = `
<div
  className="expandHourList"
>
  <div
    className="expandHourList__labelWrapper"
    onClick={[Function]}
    role="button"
  >
    <div
      className="expandHourList__label"
    >
      Hours:
    </div>
    <div
      className="expandHourList__status expandHourList__status--danger"
    >
      Closed Now
    </div>
    <div
      className="expandHourList__icon"
    >
      <svg
        height={12}
        width={12}
      >
        <use
          xlinkHref="#undefined"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`<ExpandHourList /> should be open 1`] = `
<div
  className="expandHourList"
>
  <div
    className="expandHourList__labelWrapper"
    onClick={[Function]}
    role="button"
  >
    <div
      className="expandHourList__label"
    >
      Hours:
    </div>
    <div
      className="expandHourList__status expandHourList__status--success"
    >
      Open Now
    </div>
    <div
      className="expandHourList__icon"
    >
      <svg
        height={12}
        width={12}
      >
        <use
          xlinkHref="#undefined"
        />
      </svg>
    </div>
  </div>
</div>
`;
